исправлены мелкие ошибки/добавлено пару ручек
